[tool.poetry]
name = "Canapea"
version = "0.1.0"
description = "Canapea is a Python Object-Document Mapper for working with Cloudant"
authors = ["Burak Demirtas <burak.demirtas@protonmail.com>"]
license = "MIT"
readme = "README.md"

classifier = [
    'Development Status :: 1 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'Topic :: Database',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^4.5"
pytest-cov = "^2.7"
flake8 = "^3.7"

[tool.poetry.dev-dependencies]
cloudant = "^2.0.0"
bson = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
